--- a/5. CSS/Homework/2. CSS Presentation/4. Calculator/styles/styles.css
+++ b/5. CSS/Homework/2. CSS Presentation/4. Calculator/styles/styles.css
@@ -454,20 +454,19 @@ div#btnMath {
 
 body #main-content #calc ul li button {
     border: 1px solid rgba(160, 160, 160, 0);
-    border-radius: 4px;
     background-color: transparent;
+	
 }
 
     body #main-content #calc ul li button:hover {
         border: 1px solid #aaa;
-        border-radius: 4px;
     }
 
     body #main-content #calc ul li button:active {
-        border: 1px solid #777;
-        border-radius: 4px;
+        border: 1px solid #62a3e5;
         border-style: inset;
         box-shadow: inset 0 0 8px #999;
+		background-color: #b8d8f9;
     }
 
 body #main-content #calc fieldset ul {
