--- a/14. JavaScript SPA/TicTacToe/app/views/directives/footer.html
+++ b/14. JavaScript SPA/TicTacToe/app/views/directives/footer.html
@@ -16,8 +16,10 @@
                 Powered with:
             </small>
 
-            <ul class="list-inline visible-lg-inline">
-                <li ng-repeat="technology in technologies"><strong>{{technology}}</strong></li>
+            <ul class="list-inline visible-lg-inline small">
+                <li ng-repeat="technology in technologies">
+                    <strong>{{technology}}</strong>
+                </li>
             </ul>
         </div>
     </footer>
