--- a/14. JavaScript SPA/TicTacToe/app/views/partials/auth/login.html
+++ b/14. JavaScript SPA/TicTacToe/app/views/partials/auth/login.html
@@ -1,4 +1,4 @@
-<div class="container" >
+<div class="container" ng-controller="LoginController">
     <form name="loginForm" class="form-horizontal form-login well" id="loginForm">
         <fieldset>
             <legend>Login</legend>
@@ -8,7 +8,7 @@
 
                 <div class="col-lg-10">
                     <input type="email" class="form-control" id="login-email" placeholder="Email"
-                           ng-model="username" required="" autofocus="" ng-trim="" ng-minlength="2" ng-maxlength="20">
+                           ng-model="user.username" required="" autofocus="" ng-trim="" ng-minlength="2" ng-maxlength="20">
                 </div>
             </div>
 
@@ -18,16 +18,16 @@
                 <div class="col-lg-10">
                     <input type="password" class="form-control login-password-input" id="inputPassword"
                            placeholder="Password"
-                           ng-minlength="4" ng-maxlength="20" required="" ng-model="password">
+                           ng-minlength="4" ng-maxlength="20" required="" ng-model="user.password">
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-lg-10 col-lg-offset-2">
-                    <button ng-click="login()"
+                    <button ng-click="login(user, loginForm)"
                             class="btn btn-primary btn-block login-btn col-md-8 "
-                            ng-disabled="loginForm.$invalid"
                             type="submit"> Login
+                        <!--ng-disabled="loginForm.$invalid"-->
                     </button>
                 </div>
             </div>
