--- a/14. JavaScript SPA/TicTacToe/app/views/directives/footer.html
+++ b/14. JavaScript SPA/TicTacToe/app/views/directives/footer.html
@@ -18,7 +18,7 @@
 
             <ul class="list-inline visible-lg-inline small">
                 <li ng-repeat="technology in technologies">
-                    <strong>{{technology}}</strong>
+                    <strong class="Source Title">{{technology}}</strong>
                 </li>
             </ul>
         </div>
