--- a/14. JavaScript SPA/TicTacToe/app/views/partials/lists/games.html
+++ b/14. JavaScript SPA/TicTacToe/app/views/partials/lists/games.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="ListGamesController">
     <div class="container">
         <div class="page-header big-text">
             <h1>Games:</h1>
@@ -12,8 +12,13 @@
         </div>
 
         <div class="row" ng-cloak ng-if="myGames">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <a href="#/games/add">
+                    <button class="btn btn-sm btn-success pull-right " type="submit">
+                        Create new
+                    </button>
+                </a>
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -22,26 +27,67 @@
                         <th>Creator</th>
                         <th>Status</th>
                         <th>Date Created</th>
+                        <th>
+                            <span class="glyphicon glyphicon-refresh refresh-btn btn btn-sm"
+                                  ng-click="refreshMyGames()"></span>
+
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="game in myGames">
                         <td>{{ $index + 1 }}</td>
-                        <td>{{ user.Name }}</td>
-                        <td>{{ user.Creator }}</td>
-                        <td>{{ user.Status }}</td>
-                        <td>{{ user.DateCreated | date : 'd MMM yyyy, HH:mm'  }}</td>
+                        <td>{{ game.Name }}</td>
+                        <td>{{ game.Creator }}</td>
+                        <td>{{ game.Status | gameStatusFilter:{state:game.Status, firstPlayerName:firstPlayer,
+                            currentPlayerName: currentPlayer} }}</td>
+                        <td>{{ game.DateCreated | date : 'd MMM yyyy, HH:mm' }}</td>
+                        <td>
+                            <button class="btn btn-primary btn-xs " ng-click="playGame(game.Id)">Play</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-            <div class="col-md-3"></div>
         </div>
 
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-6">
                 <h3>Joined games: </h3>
+            </div>
+        </div>
+        <div class="row" ng-cloak ng-if="joinedGames">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Creator</th>
+                        <th>Status</th>
+                        <th>Date Created</th>
+                        <th>
+                            <span class="glyphicon glyphicon-refresh refresh-btn btn btn-sm"
+                                  ng-click="refreshJoinedGames()"></span>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="game in joinedGames">
+                        <td>{{ $index + 1 }}</td>
+                        <td>{{ game.Name }}</td>
+                        <td>{{ game.Creator }}</td>
+                        <td>{{ game.Status | gameStatusFilter:{state:game.Status, firstPlayerName:firstPlayer,
+                            currentPlayerName: currentPlayer} }}</td>
+                        <td>{{ game.DateCreated | date : 'd MMM yyyy, HH:mm' }}</td>
+                        <td>
+                            <button class="btn btn-primary btn-xs" ng-click="playGame(game.Id)">Play</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
 
@@ -51,6 +97,38 @@
                 <h3>Available games: </h3>
             </div>
         </div>
-
+        <div class="row" ng-cloak ng-if="availableGames">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Creator</th>
+                        <th>Status</th>
+                        <th>Date Created</th>
+                        <th>
+                            <span class="glyphicon glyphicon-refresh refresh-btn btn btn-sm "
+                                  ng-click="refreshAvailableGames()"></span>
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="game in availableGames">
+                        <td>{{ $index + 1 }}</td>
+                        <td>{{ game.Name }}</td>
+                        <td>{{ game.Creator }}</td>
+                        <td>{{ game.Status | gameStatusFilter:{state:game.Status, firstPlayerName:firstPlayer,
+                            currentPlayerName: currentPlayer} }}</td>
+                        <td>{{ game.DateCreated | date : 'd MMM yyyy, HH:mm' }}</td>
+                        <td>
+                            <button class="btn btn-primary btn-xs" ng-click="joinGame(game.Id)">Join</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
