--- a/16. ASP.NET Web Forms/19. Exam/ExamSkeleton/ExamSkeleton.Web/Site.Mobile.Master
+++ b/16. ASP.NET Web Forms/19. Exam/ExamSkeleton/ExamSkeleton.Web/Site.Mobile.Master
@@ -1,4 +1,4 @@
-<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Mobile.master.cs" Inherits="ExamSkeleton.Web.Site_Mobile" %>
+<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Mobile.master.cs" Inherits="Articles.Web.Site_Mobile" %>
 <%@ Register Src="~/ViewSwitcher.ascx" TagPrefix="friendlyUrls" TagName="ViewSwitcher" %>
 
 <!DOCTYPE html>
